FEAT: Add trips page to dashboard

--- a/app/views/dashboards/show/_tabs.html.erb
+++ b/app/views/dashboards/show/_tabs.html.erb
@@ -6,7 +6,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="dash-inner-nav" id="pills-trips-tab" data-toggle="pill" href="#pills-open" role="tab" aria-controls="pills-trips" aria-selected="false">
+        <a class="dash-inner-nav" id="pills-trips-tab" data-toggle="pill" href="#pills-trips" role="tab" aria-controls="pills-trips" aria-selected="false">
           Trips (<%= @user.trips.count %>)
         </a>
       </li>
