--- a/app/views/dashboards/show/_trips.html.erb
+++ b/app/views/dashboards/show/_trips.html.erb
@@ -5,23 +5,13 @@
             <p><strong>You have 0 trips.</strong></p>
         </div>
     <% else %>
-        <div class="container__dashboard">
-            <div class="display__itinerary">
-                <%= render partial: 'shared/events/grouped_events_all', 
-                    locals: { 
-                        events: @past_events,
-                        user: @user,
-                        class_type: "reminder-card-text-image"
-                    }
-                %>
+
+            <div class="card__grid">
+              <% @trips.each do |trip| %>
+                <%= render 'shared/cards/trip_card', element: trip %>   
+              <% end %>
             </div>
 
-            <div class="mt-4">
-                <div id="js-calendar" class="dash__calendar mb-5">
-                    <%= render 'locations/by_location/calendar_locations', location_events: @past_events %>
-                </div>
-            </div>
-        </div>
     <% end %>
 
 </div>
