FEAT: Add access to show for events

--- a/app/views/shared/components/_heart.html.erb
+++ b/app/views/shared/components/_heart.html.erb
@@ -5,7 +5,7 @@
       <p class="ml-3 event-save">SAVED!</p>
     </div>
   <% end %>
-<% else %>
+<% elsif current_user %>
   <%= link_to favorites_path(element, favorite: { favoritable_id: element.id, favoritable_type: element.class }), method: :patch, remote: true do %>
     <div class="d-flex mt-3">
       <i class="far fa-heart mt-1"></i>
