--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -12,5 +12,11 @@
 
 <%= render 'locations/by_location/upcoming_events', location: @location %>
 
-<div class="page-bottom-spacer"></div>
+
+<%= render partial: 'shared/events/all_events_bottom', 
+    locals: {
+        events: @location.events,
+        title: "ALL EVENTS IN #{@location.city.upcase}"
+    }
+%>
 
