FEAT: Add chat pills and top area styling

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,6 +11,7 @@
 @import "calendar";
 @import "card";
 @import "carousel";
+@import "chat";
 @import "container";
 @import "dropdown";
 @import "events";
