--- a/app/views/dashboards/show/_tabs.html.erb
+++ b/app/views/dashboards/show/_tabs.html.erb
@@ -7,12 +7,12 @@
       </li>
       <li class="nav-item">
         <a class="dash-inner-nav" id="pills-past-events-tab" data-toggle="pill" href="#pills-past-events" role="tab" aria-controls="pills-past-events" aria-selected="false">
-          All events (<%= @user.past_events.count %>)
+          All events
         </a>
       </li>
       <li class="nav-item">
         <a class="dash-inner-nav" id="pills-trips-tab" data-toggle="pill" href="#pills-trips" role="tab" aria-controls="pills-trips" aria-selected="false">
-          Trips (<%= @user.trips.count %>)
+          Trips
         </a>
       </li>
       <li class="nav-item">
@@ -27,7 +27,7 @@
       </li>
       <li class="nav-item">
         <a class="dash-inner-nav" id="pills-favourites-tab" data-toggle="pill" href="#pills-favourites" role="tab" aria-controls="pills-favourites" aria-selected="false">
-          Favourites (<%= @user.num_favs %>)
+          Favourites
         </a>
       </li>
 
