--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -50,6 +50,9 @@
           <%= render partial: 'shared/components/sidebar_links',
             locals: { link_text: 'DASHBOARD', path: dashboards_path }
           %>
+          <%= render partial: 'shared/components/sidebar_links',
+            locals: { link_text: 'CHATS', path: event_registrations_path }
+          %>
         <% end %>
 
       </ul>
