FEAT: Create separate chatrooms for each chat with routes

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -51,7 +51,7 @@
             locals: { link_text: 'DASHBOARD', path: dashboards_path }
           %>
           <%= render partial: 'shared/components/sidebar_links',
-            locals: { link_text: 'CHATS', path: event_registrations_path }
+            locals: { link_text: 'CHATS', path: chats_path }
           %>
         <% end %>
 
