--- a/app/assets/stylesheets/components/_chat.scss
+++ b/app/assets/stylesheets/components/_chat.scss
@@ -37,3 +37,33 @@
         text-transform: uppercase;
     }
 }
+
+.chat-grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+}
+
+.chat-window {
+    height: 36vh;
+}
+
+.chat-window-messages {
+    height: 100%;
+    overflow-y: scroll;
+}
+
+// .chat-window {
+//   display:flex;
+//   flex-direction:column;
+//   height:100%;
+// }
+// .chat-messages {
+//   flex: 1;
+//   height:100%;
+//   overflow: auto;
+//   display: flex;
+//   flex-direction: column-reverse;
+// }
+
+// .chat-input { border-top: 1px solid #999; padding: 20px 5px }
+// .chat-input-text { width: 60%; min-height: 40px; max-width: 60%; }
