--- a/app/views/shared/chats/_sidebar_chat.html.erb
+++ b/app/views/shared/chats/_sidebar_chat.html.erb
@@ -1,6 +1,6 @@
 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">                
     <% chats.each_with_index do |chat, ind|  %>
-        <%= link_to chat_path(chat), class: "nav-link chat-nav-link #{'active' if params[:event_registration_id] == chat.id}" do %>
+        <%= link_to chat_path(chat), class: "nav-link chat-nav-link #{'active' if params[:event_registration_id] == chat.id}", anchor: "#{"message-#{chat.messages.last.id}" if chat.messages.exists?}" do %>
             <div>
                 <% if chat.owner == current_user %>
                     <%= render 'shared/avatars/avatar_pill_chat', element: chat.user, event: chat.event %>
