--- a/app/views/dashboards/show/_tabs.html.erb
+++ b/app/views/dashboards/show/_tabs.html.erb
@@ -2,7 +2,7 @@
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
       <li class="nav-item">
         <a class="active dash-inner-nav" id="pills-events-tab" data-toggle="pill" href="#pills-events" role="tab" aria-controls="pills-events" aria-selected="true">
-          Upcoming events (<%= @user.upcoming_events.count %>)
+          Upcoming events (<%= @events.count %>)
         </a>
       </li>
       <li class="nav-item">
@@ -18,11 +18,6 @@
       <li class="nav-item">
         <a class="dash-inner-nav" id="pills-mates-tab" data-toggle="pill" href="#pills-mates" role="tab" aria-controls="pills-mates" aria-selected="false">
           Mate up requests (<%= @user.num_registered_events + @user.num_listings %>)
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="dash-inner-nav" id="pills-chats-tab" data-toggle="pill" href="#pills-chats" role="tab" aria-controls="pills-chats" aria-selected="false">
-          Chats
         </a>
       </li>
       <li class="nav-item">
@@ -49,9 +44,6 @@
       </div>
       <div class="tab-pane fade" id="pills-trips" role="tabpanel" aria-labelledby="pills-trips-tab">
         <%= render 'dashboards/show/trips' %>
-      </div>
-      <div class="tab-pane fade" id="pills-chats" role="tabpanel" aria-labelledby="pills-chats-tab">
-        <%= render 'dashboards/show/chats' %>
       </div>
       <div class="tab-pane fade" id="pills-mates" role="tabpanel" aria-labelledby="pills-mates-tab">
         <%= render 'dashboards/show/mateup_listings' %>
