FEAT: JS and data attributes to identify sender of message for SCSS

--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -4,7 +4,7 @@
     </div>
 
     <div class="chat-grid">
-        <%= render 'shared/chats/sidebar_chat', chats: @chats %>s
+        <%= render 'shared/chats/sidebar_chat', chats: @chats %>
 
     </div>
 </div>
