--- a/app/views/shared/chats/_message.html.erb
+++ b/app/views/shared/chats/_message.html.erb
@@ -1,7 +1,10 @@
-<div class="message-container chat-messages" id="message-<%= message.id %>">
+<div class="message-container chat-messages <%= message.user == current_user ? 'message-owner' : 'message-mate' %>"
+  id="sender-<%= message.user.id %>">
+
   <i class="author">
     <span><%= message.user.first_name %></span>
     <small><%= message.created_at.strftime("%a %b %e at %l:%M%p") %></small>
   </i>
+
   <p><%= message.content %></p>
 </div>
