--- a/app/assets/stylesheets/components/_chat.scss
+++ b/app/assets/stylesheets/components/_chat.scss
@@ -50,7 +50,13 @@
 .chat-window-messages {
     height: 100%;
     overflow-y: scroll;
+    padding: 1rem;
 }
+
+.chat-breadcrumb {
+    margin-bottom: 0;
+}
+
 
 // .chat-window {
 //   display:flex;
@@ -67,3 +73,17 @@
 
 // .chat-input { border-top: 1px solid #999; padding: 20px 5px }
 // .chat-input-text { width: 60%; min-height: 40px; max-width: 60%; }
+
+@media(max-width: 1000px) {
+    .chat-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .chat-sidebar-mobile {
+        display: none;
+    }
+
+    .chat-window {
+        height: 26vh;
+    }
+}
