--- a/app/views/shared/chats/_message.html.erb
+++ b/app/views/shared/chats/_message.html.erb
@@ -1,10 +1,6 @@
-<div class="message-container chat-messages <%= message.user == current_user ? 'message-owner' : 'message-mate' %>"
-  id="sender-<%= message.user.id %>">
-
-  <i class="author">
-    <span><%= message.user.first_name %></span>
-    <small><%= message.created_at.strftime("%a %b %e at %l:%M%p") %></small>
-  </i>
+<div class="sender-<%= message.user.id %> message-container chat-messages <%= message.user == current_user ? 'message-owner' : 'message-mate' %>"
+  id="message-<%= message.id %>">
 
   <p><%= message.content %></p>
+  <!-- <small><%#= message.created_at.strftime("%a %b %e at %l:%M%p") %><small> -->
 </div>
