FEAT: Styling for chat messages

--- a/app/assets/stylesheets/components/_chat.scss
+++ b/app/assets/stylesheets/components/_chat.scss
@@ -28,8 +28,6 @@
 
 .chat-user {
     align-items: center;
-    padding-bottom: 1rem;
-    border-bottom: solid 1px $teal;
     h6 {
         margin: 0;
         margin-left: 1rem;
@@ -55,6 +53,17 @@
 
 .chat-breadcrumb {
     margin-bottom: 0;
+}
+
+.chat-top-info {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: solid 1px $teal;
+    padding-bottom: 1rem;
+    align-items: center;
+    h5 {
+        margin-bottom: 0;
+    }
 }
 
 
