FEAT: Add animate.css animations to index pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,9 +7,9 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import 'mapbox-gl/dist/mapbox-gl';
-@import 'select2/dist/css/select2';
-
+@import "mapbox-gl/dist/mapbox-gl";
+@import "select2/dist/css/select2";
+@import "animate.css/animate";
 
 // Your CSS partials
 @import "components/index";
