--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,9 +1,12 @@
-<%= render 'featured_activities', activities: @activities.most_popular_activities[0..2] %>
+<div class="js-fade">
+
+  <%= render 'featured_activities', activities: @activities.most_popular_activities[0..2] %>
 
 
-<!-- <div>
-  <%#= render 'shared/search/search_activities' %>
-</div> -->
+  <!-- <div>
+    <%#= render 'shared/search/search_activities' %>
+  </div> -->
 
-<%= render 'all_activities', activities: @activities %>
+  <%= render 'all_activities', activities: @activities %>
 
+</div>
