--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -9,12 +9,15 @@
     }
 %>
 
-<!-- Featured locations -->
-<div class="almost-white-background pt-4">
-  <%= render 'locations/by_location/featured_location' %>
-</div>
+<div class="js-fade">
+  <!-- Featured locations -->
+  <div class="almost-white-background pt-4">
+    <%= render 'locations/by_location/featured_location' %>
+  </div>
 
-<!-- ALL LOCATIONS -->
-<div>
-  <%= render 'locations/by_location/non_featured_locations' %>
+  <!-- ALL LOCATIONS -->
+  <div>
+    <%= render 'locations/by_location/non_featured_locations' %>
+  </div>
+  
 </div>
