--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div id="sidebar">
+<div id="sidebar" data-turbolinks-animate-persist-itself="true">
   <div id="nav-button">
       <div id="top" class="nav-slim-bar"></div>
       <div id="middle" class="nav-slim-bar"></div>
