--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -21,7 +21,8 @@
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
     <%#= link_to "Sign in with Google", user_google_omniauth_authorize_path, method: :post %>
+    <%#= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path, method: :post %>
 
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
+    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class: 'ml-2' %><br />
   <% end %>
 <% end %>
