FEAT: Update profile page && edit for google auth user

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="user-description">
     <div>
     <div class="breadcrumb">
-      <%= link_to user_path(current_user) do %>
+      <%= link_to profile_path do %>
           <i class="fas fa-angle-left"></i>
           Back
       <% end %>
