FEAT: Husk isotope

--- a/app/views/shared/cards/_event_card.html.erb
+++ b/app/views/shared/cards/_event_card.html.erb
@@ -23,7 +23,7 @@
             </div>
 
             <div class="reminder-details p-4">
-                <h5><%= element.title %></h5>
+                <h5 class="js-name"><%= element.title %></h5>
                 <div class="reminder-travel-plan"><p><%= element.trip.title %></p></div>
                 <div class="reminder-location d-flex">
                     <i class="fas fa-map-marker-alt pr-2 pt-1"></i>
