--- a/app/views/locations/by_location/_non_featured_locations.html.erb
+++ b/app/views/locations/by_location/_non_featured_locations.html.erb
@@ -1,12 +1,18 @@
 <!-- LOCATIONS -->
 <div class="almost-white-background">
+
+  <%# <div>
+      <button class="button is-checked" data-sort-by="original-order">original order</button>
+      <button class="button js-sort-btn" data-sort-by="name">name</button>
+  </div> %>
+
   <div class="page-container-home">
     <div class="featured-title-home d-flex justify-content-between align-items-center">
       <h2>DESTINATION DISCOVERY</h2>
     </div>
     <div class="">
       <!-- Card Carousel -->
-      <div class="card__grid">
+      <div class="card__grid js-grid">
         <% @all_locations.each do |location| %>
           <%= render 'shared/cards/location_card', element: location %>
         <% end %>
