--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -9,7 +9,8 @@
     }
 %>
 
-<div class="js-fade">
+<%# <div class="js-fade"> %>
+<div>
   <!-- Featured locations -->
   <div class="almost-white-background pt-4">
     <%= render 'locations/by_location/featured_location' %>
@@ -17,6 +18,7 @@
 
   <!-- ALL LOCATIONS -->
   <div>
+
     <%= render 'locations/by_location/non_featured_locations' %>
   </div>
   
