--- a/app/views/locations/by_location/_non_featured_locations.html.erb
+++ b/app/views/locations/by_location/_non_featured_locations.html.erb
@@ -17,7 +17,7 @@
           <%= render 'locations' %>
       </div>
 
-      <div class="mt-5" data-infinite-scroll-target="pagination">
+      <div class="mt-5 paginate" data-infinite-scroll-target="pagination">
         <%== pagy_nav(@pagy) %>
       </div>
 
