--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -9,8 +9,7 @@
     }
 %>
 
-<%# <div class="js-fade"> %>
-<div>
+<div class="js-fade">
   <!-- Featured locations -->
   <div class="almost-white-background pt-4">
     <%= render 'locations/by_location/featured_location' %>
