FEAT: Remove pagy nav

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -23,6 +23,7 @@
 @import "map";
 @import "message";
 @import "navbar";
+@import "pagination";
 @import "pill";
 @import "search";
 @import "select";
