FEAT: Vonage API video chat

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -14,7 +14,7 @@
             <%= render 'shared/chats/sidebar_chat', chats: @chats %>
         </div>
 
-        <div>
+        <div class="grid-two-mobile">
             <div class="chat-window">
                 <div class="chat-top-info pb-2">
                     <% if @chat.owner == current_user %>
@@ -33,7 +33,16 @@
                 <%= render 'shared/chats/chatroom', chat: @chat %>
 
             </div>
+
+            <div id="videos"
+                data-controller="vonage"
+                data-vonage-session-id="<%= @chat.vonage_session_id %>"
+                data-vonage-token="<%= @token %>"
+                data-vonage-api-key="<%= ENV['VONAGE_API_KEY'] %>"
+                data-vonage-name="<%= @chat.title %>">
+            </div>
         </div>
+
 
     </div>
 </div>
