--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -2,7 +2,7 @@
     <h1 class="form-large-title">CREATE A NEW TRAVEL PLAN</h1>
     <p>You're going on an adventure!</p>
     <div class="breadcrumb">
-        <%= link_to dashboards_path do %>
+        <%= link_to dashboard_path do %>
             <i class="fas fa-angle-left"></i>
             Manage Your Trips
         <% end %>
