--- a/app/assets/stylesheets/components/_video.scss
+++ b/app/assets/stylesheets/components/_video.scss
@@ -1,8 +1,11 @@
 #videos {
     position: relative;
-    margin-left: 1rem;
     border-radius: 1rem;
-    margin-top: 3rem;
+    margin: 0.4rem auto;
+    width: 80%;
+    min-height: 34vh;
+    height: 100%;
+    background-color: $travelmate-gray;
 }
 
 .OT_widget-container {
@@ -10,7 +13,7 @@
 }
 
 .OT_root {
-    height: 240px !important;
+    height: 100% !important;
 }
 
 .OT_subscriber {
@@ -22,5 +25,5 @@
     bottom: 0;
     z-index: 1;
     right: 0;
-    height: 40% !important;
+    height: 50% !important;
 }
